chore(release): bump version to 24.9.1 in package.json chore(release): update changelog for version 24.9.1 fix(scss): move background-image property to correct selector fix(scss): add margin-left to popper element for better alignment chore(pc): bump version to 14.0.2 in package.json chore(web): bump version to 9.33.2 in manifest.json for all browsers

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -687,17 +687,6 @@ html[data-zadark-theme="dark"] {
       padding: 16px;
     }
 
-    .message-view {
-      &__blur__overlay {
-        &,
-        &_noavatar {
-          background-image: var(--zadark-thread-chat-bg-url, var(--message-view-gradient));
-          // background-size: cover;
-          // background-position: center;
-        }
-      }
-    }
-
     .media-tabs__main {
       border-bottom-color: var(--border);
 
@@ -2339,6 +2328,7 @@ body.zadark {
     &__blur__overlay {
       &,
       &_noavatar {
+        background-image: var(--zadark-thread-chat-bg-url, var(--message-view-gradient));
         background-size: cover;
         background-position: center;
       }
@@ -2384,6 +2374,7 @@ body.zadark {
       overflow: hidden;
       border-radius: var(--zadark-rounded-base);
       box-shadow: var(--popper-shadow);
+      margin-left: -1px;
 
       #js-btn-scroll {
         bottom: 16px;
